--- a/index.css
+++ b/index.css
@@ -18,11 +18,13 @@ menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
 	padding: 0;
-	border: 0;
+	/* border: 0; */
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
 }
+
+
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
@@ -46,6 +48,137 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-/* Reset ^
-================================ */
 
+
+/* Reset ^
+================================ 
+My CSS BELOW
+================================
+*/
+
+
+
+/* General Styles */
+*{
+	box-sizing:border-box; 
+	/* only be a s big as the width I've given, if I give you padding or I give you a border apply it within your width not in addition to it - tells elements to respect given width */
+	max-width: 100%;
+	/* you can never be bigger than your parent */
+	/* border:1px solid grey; */
+}
+html{
+	font-size: 62.5%;
+}
+body{
+	font-size:1.6rem;
+	line-height:1.5;
+	font-family: 'Roboto Mono', monospace;
+}
+h1{
+	font-family: 'Chealsea Market', cursive;
+	font-size:6rem;
+
+}
+/* nav sections */
+a{
+	text-decoration: none;;
+}
+nav{
+	padding:2% 0%;
+}
+nav a{
+	display: inline-block;
+	padding:1% 0;
+	width:10%;
+	border-radius: 10px;
+	text-align: center;
+	color:#fff;
+}
+.orange{
+	background:#FF764E;
+	margin-left:10%;
+}
+.blue{
+	background-color: #5ED3EB;
+	margin:0 20%;
+}
+.yellow{
+	background-color: #FFCD69;
+	margin-right:10%;
+}
+
+
+/* header section - image w/ text */
+.image, .text{
+	display:inline-block;
+}
+.text{
+	position:absolute;
+	bottom: 30%;
+	text-align: center;
+}
+.image{
+	width: 25%;
+	margin-left: 5%;
+	margin-top: 3%;
+}
+.circle{
+	border-radius: 50%;
+}
+.text{
+	width: 50%;
+	margin:5%;
+}
+
+.text h2{
+	width:75%;
+	margin: 0 auto;
+	text-align: center;
+	padding-bottom: 2%;
+}
+.text p{
+	width: 60%;
+	text-align: center;
+	margin: 0 auto;
+}
+
+/*colored section  */
+.info{
+	background:#DDB9A3;
+	text-align: center;
+	padding: 0 1%;
+	margin-left:2%;
+	margin-right:2%;
+	color: white;
+}
+
+/* icon section */
+.fire{
+	width:10%;
+	margin-left:45%;
+}
+.icons p{
+	width: 30%;
+	margin-left:35%;
+	padding-bottom: 10%;
+}
+.van{
+	width:10%;
+	margin-left:45%;
+}
+
+/* background image */
+/* why doesn't this work? */
+
+.background{
+	background: url("./assets/footer_img.jpg");
+	height:30vw;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: top;
+}
+
+/* footer */
+footer nav{
+	background:#F9E7DC;
+}
