--- a/index.css
+++ b/index.css
@@ -75,7 +75,7 @@ body{
 	font-family: 'Roboto Mono', monospace;
 }
 h1{
-	font-family: 'Chealsea Market', cursive;
+	font-family: 'Chelsea Market', cursive;
 	font-size:6rem;
 
 }
@@ -84,23 +84,23 @@ a{
 	text-decoration: none;;
 }
 nav{
-	padding:2% 0%;
+	padding:2%;
 }
 nav a{
 	display: inline-block;
-	padding:1% 0;
-	width:10%;
+	padding:.5% 0;
+	width:12%;
 	border-radius: 10px;
 	text-align: center;
 	color:#fff;
 }
 .orange{
 	background:#FF764E;
-	margin-left:10%;
+	margin-left:15%;
 }
 .blue{
 	background-color: #5ED3EB;
-	margin:0 20%;
+	margin:0 15%;
 }
 .yellow{
 	background-color: #FFCD69;
@@ -114,20 +114,20 @@ nav a{
 }
 .text{
 	position:absolute;
-	bottom: 30%;
+	bottom: 35%;
 	text-align: center;
+	width: 50%;
+	margin:5%;
+	margin-left: -3%;
 }
 .image{
 	width: 25%;
-	margin-left: 5%;
+	margin-left: 8%;
 	margin-top: 3%;
 }
 .circle{
 	border-radius: 50%;
-}
-.text{
-	width: 50%;
-	margin:5%;
+	width: 75%;
 }
 
 .text h2{
@@ -137,7 +137,7 @@ nav a{
 	padding-bottom: 2%;
 }
 .text p{
-	width: 60%;
+	width: 50%;
 	text-align: center;
 	margin: 0 auto;
 }
@@ -146,10 +146,12 @@ nav a{
 .info{
 	background:#DDB9A3;
 	text-align: center;
-	padding: 0 1%;
-	margin-left:2%;
-	margin-right:2%;
+	padding: 1%;
+	margin: 3% 4% 3% 4%;
 	color: white;
+}
+.info p{
+	font-size: 2rem;
 }
 
 /* icon section */
@@ -158,13 +160,18 @@ nav a{
 	margin-left:45%;
 }
 .icons p{
-	width: 30%;
-	margin-left:35%;
+	width: 20%;
+	margin-left:40%;
 	padding-bottom: 10%;
+	font-size: 1.4rem;
+	text-align: center;
 }
 .van{
 	width:10%;
 	margin-left:45%;
+}
+.icons span{
+	font-weight: bold;
 }
 
 /* background image */
